main1/projects/defaultproject/opaconstraints/artifacts/two/gatekeeper-allowedrepos-policy-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repos
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    repos:
      - "amazonaws.com" # ECR registry for EKS cluster
      - "artifactory.arlocloud.com" # Arlo artifactory registry
      - "k8s.gcr.io" # Kubernetes registry
      - "registry.rafay-edge.net" # Rafay registry
      - "velero" # velero registry
      - "openpolicyagent" # OPA gatekeeper
      - "docker.io" # bitnami registry
